// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders with ellipsis after page 1 and before last page 1`] = `
<nav
  className="d-flex justify-content-center"
>
  <div
    className="pagination"
  >
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Prev
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        1
      </span>
    </div>
    <div
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        6
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        7
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        8
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        9
      </span>
    </div>
    <div
      className="page-item active"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        10
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        11
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        12
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        13
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        14
      </span>
    </div>
    <div
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        25
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Next
      </span>
    </div>
  </div>
</nav>
`;

exports[`Pagination renders with ellipsis only after page 1 1`] = `
<nav
  className="d-flex justify-content-center"
>
  <div
    className="pagination"
  >
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Prev
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        1
      </span>
    </div>
    <div
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        17
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        18
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        19
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        20
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        21
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        22
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        23
      </span>
    </div>
    <div
      className="page-item active"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        24
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        25
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Next
      </span>
    </div>
  </div>
</nav>
`;

exports[`Pagination renders with ellipsis only before last page 1`] = `
<nav
  className="d-flex justify-content-center"
>
  <div
    className="pagination"
  >
    <div
      className="page-item disabled no-pointer-events"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Prev
      </span>
    </div>
    <div
      className="page-item active"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        1
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        2
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        3
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        4
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        5
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        6
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        7
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        8
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        9
      </span>
    </div>
    <div
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        25
      </span>
    </div>
    <div
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Next
      </span>
    </div>
  </div>
</nav>
`;
